--- a/subs/ttvg.yaml
+++ b/subs/ttvg.yaml
@@ -1,11 +1,49 @@
 proxies:
-  - {"name":"节点日期：01-14","server":"irvideo.cfd","port":443,"type":"vmess","uuid":"e537f2f5-2a0c-4f59-92c9-832ca6433bf3","alterId":0,"cipher":"auto","tls":true,"network":"ws","ws-opts":{"path":"/linkws","headers":{"Host":"irvideo.cfd"}},"servername":"irvideo.cfd"}
-  - {"name":"中国【付费推荐：https://socks.news】42","server":"ctmm.gscloud.bond","port":31620,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"f16d3752-7bae-474e-87dc-f892df2caeaf"}
-  - {"name":"瑞士【付费推荐：https://socks.news】25","server":"195.15.254.25","port":54748,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"ghBuJ9pZOF9MohhGyPjo3rvilQhlw9NzBDlOVDonQN0="}
-  - {"name":"荷兰【付费推荐：https://socks.news】39","server":"213.109.147.242","port":62685,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"VpKABcOpNNA0l5G2AVOmw8"}
-  - {"name":"美国【付费推荐：https://socks.news】30","server":"151.101.2.216","port":80,"type":"vmess","uuid":"c69f3029-ae1e-45ca-aa08-70970f14dfd2","alterId":0,"cipher":"auto","tls":false,"network":"ws","ws-opts":{"path":"/racevpn?telegram@ISVvpn-telegram@ISVvpn-telegram@ISVvpn","headers":{"Host":"telegram-ISVvpn.ir"}}}
-  - {"name":"法国【付费推荐：https://socks.news】22","server":"163.5.159.231","port":443,"type":"vmess","uuid":"e537f2f5-2a0c-4f59-92c9-832ca6433bf3","alterId":0,"cipher":"auto","tls":true,"network":"ws","ws-opts":{"path":"/linkws","headers":{"Host":"irvideo.cfd"}},"servername":"irvideo.cfd"}
-  - {"name":"伊朗【付费推荐：https://socks.news】9","server":"83.147.216.173","port":9848,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"zUQvFioae7KzAZ2GCMgNum"}
-  - {"name":"俄罗斯【付费推荐：https://socks.news】33","server":"185.22.155.228","port":23456,"type":"ss","cipher":"aes-256-gcm","password":"dongtaiwang.com"}
-  - {"name":"伊朗【付费推荐：https://socks.news】4","server":"92.242.220.22","port":37885,"type":"vmess","uuid":"8dee19ab-50ce-4d06-be42-5e53c8989ccc","alterId":0,"cipher":"auto","tls":false}
-  - {"name":"未知【付费推荐：https://socks.news】43","server":"naiu-jp.05vr9nyqg5.download","port":13012,"type":"trojan","password":"e279c494-c426-443a-a034-a04516409242","sni":"cloudflare.node-ssl.cdn-alibaba.com"}
+  - {"name":"节点日期：01-15","server":"13.51.34.64","port":22222,"type":"trojan","password":"telegram-id-privatevpns","sni":"trojan.burgerip.co.uk"}
+  - {"name":"美国【付费推荐：https://socks.news】2","server":"66.81.247.88","port":2083,"type":"trojan","password":"Aimer","sni":"ameqo.esslh.filegear-sg.me","network":"ws","ws-opts":{"path":"/","headers":{"Host":"ameqo.esslh.filegear-sg.me"}}}
+  - {"name":"美国【付费推荐：https://socks.news】3","server":"tw02.trojanyyds.xyz","port":443,"type":"trojan","password":"243eab52-9ac1-405c-887c-eb112c0985b8","sni":"tw02.trojanyyds.xyz"}
+  - {"name":"美国【付费推荐：https://socks.news】4","server":"104.19.107.190","port":2096,"type":"trojan","password":"Aimer","sni":"ameqo.esslh.filegear-sg.me","network":"ws","ws-opts":{"path":"/","headers":{"Host":"ameqo.esslh.filegear-sg.me"}}}
+  - {"name":"美国【付费推荐：https://socks.news】5","server":"198.62.62.192","port":2083,"type":"trojan","password":"Aimer","sni":"ameqo.esslh.filegear-sg.me","network":"ws","ws-opts":{"path":"/","headers":{"Host":"ameqo.esslh.filegear-sg.me"}}}
+  - {"name":"美国【付费推荐：https://socks.news】6","server":"tw01.trojanyyds.xyz","port":443,"type":"trojan","password":"243eab52-9ac1-405c-887c-eb112c0985b8","sni":"tw01.trojanyyds.xyz"}
+  - {"name":"美国【付费推荐：https://socks.news】7","server":"104.19.57.183","port":2096,"type":"trojan","password":"Aimer","sni":"ameqo.esslh.filegear-sg.me","network":"ws","ws-opts":{"path":"/","headers":{"Host":"ameqo.esslh.filegear-sg.me"}}}
+  - {"name":"美国【付费推荐：https://socks.news】8","server":"74.226.136.204","port":443,"type":"trojan","password":"243eab52-9ac1-405c-887c-eb112c0985b8","sni":"tw02.trojanyyds.xyz"}
+  - {"name":"亚美尼亚【付费推荐：https://socks.news】9","server":"188.164.159.91","port":2083,"type":"trojan","password":"Aimer","sni":"ameqo.esslh.filegear-sg.me","network":"ws","ws-opts":{"path":"/","headers":{"Host":"ameqo.esslh.filegear-sg.me"}}}
+  - {"name":"荷兰【付费推荐：https://socks.news】10","server":"213.109.147.242","port":62685,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"VpKABcOpNNA0l5G2AVOmw8"}
+  - {"name":"俄罗斯【付费推荐：https://socks.news】11","server":"185.204.109.190","port":8443,"type":"trojan","password":"Aimer","sni":"ameqo.esslh.filegear-sg.me","network":"ws","ws-opts":{"path":"/","headers":{"Host":"ameqo.esslh.filegear-sg.me"}}}
+  - {"name":"英国【付费推荐：https://socks.news】12","server":"3.10.156.33","port":22222,"type":"trojan","password":"telegram-id-privatevpns","sni":"trojan.burgerip.co.uk"}
+  - {"name":"中国【付费推荐：https://socks.news】13","server":"154.197.64.166","port":2053,"type":"trojan","password":"Aimer","sni":"ameqo.esslh.filegear-sg.me","network":"ws","ws-opts":{"path":"/","headers":{"Host":"ameqo.esslh.filegear-sg.me"}}}
+  - {"name":"爱尔兰【付费推荐：https://socks.news】14","server":"34.240.132.52","port":22222,"type":"trojan","password":"telegram-id-privatevpns","sni":"trojan.burgerip.co.uk"}
+  - {"name":"美国【付费推荐：https://socks.news】15","server":"108.165.152.80","port":2083,"type":"trojan","password":"Aimer","sni":"ameqo.esslh.filegear-sg.me","network":"ws","ws-opts":{"path":"/","headers":{"Host":"ameqo.esslh.filegear-sg.me"}}}
+  - {"name":"美国【付费推荐：https://socks.news】16","server":"108.165.152.104","port":2053,"type":"trojan","password":"Aimer","sni":"ameqo.esslh.filegear-sg.me","network":"ws","ws-opts":{"path":"/","headers":{"Host":"ameqo.esslh.filegear-sg.me"}}}
+  - {"name":"美国【付费推荐：https://socks.news】17","server":"13.49.236.193","port":22222,"type":"trojan","password":"telegram-id-privatevpns","sni":"trojan.burgerip.co.uk"}
+  - {"name":"英国【付费推荐：https://socks.news】18","server":"series-a2.samanehha.co","port":443,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"mps3FwmDjLrWaOVg"}
+  - {"name":"美国【付费推荐：https://socks.news】19","server":"sg02.trojanyyds.xyz","port":443,"type":"trojan","password":"243eab52-9ac1-405c-887c-eb112c0985b8","sni":"sg02.trojanyyds.xyz"}
+  - {"name":"美国【付费推荐：https://socks.news】20","server":"52.29.12.156","port":22222,"type":"trojan","password":"telegram-id-privatevpns","sni":"trojan.burgerip.co.uk"}
+  - {"name":"美国【付费推荐：https://socks.news】21","server":"52.28.23.85","port":22222,"type":"trojan","password":"telegram-id-directvpn","sni":"trojan.burgerip.co.uk"}
+  - {"name":"美国【付费推荐：https://socks.news】22","server":"3.98.39.75","port":22222,"type":"trojan","password":"telegram-id-directvpn","sni":"trojan.burgerip.co.uk"}
+  - {"name":"爱尔兰【付费推荐：https://socks.news】23","server":"54.220.247.140","port":22222,"type":"trojan","password":"telegram-id-privatevpns","sni":"trojan.burgerip.co.uk"}
+  - {"name":"荷兰【付费推荐：https://socks.news】24","server":"45.136.199.132","port":443,"type":"trojan","password":"Aimer","sni":"ameqo.esslh.filegear-sg.me","network":"ws","ws-opts":{"path":"/","headers":{"Host":"ameqo.esslh.filegear-sg.me"}}}
+  - {"name":"美国【付费推荐：https://socks.news】25","server":"3.23.71.236","port":22222,"type":"trojan","password":"telegram-id-directvpn","sni":"trojan.burgerip.co.uk"}
+  - {"name":"韩国【付费推荐：https://socks.news】26","server":"3.35.20.163","port":80,"type":"ss","cipher":"aes-256-gcm","password":"amazonskr05"}
+  - {"name":"英国【付费推荐：https://socks.news】27","server":"series-a2.varzesh360.co","port":443,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"mps3FwmDjLrWaOVg"}
+  - {"name":"芬兰【付费推荐：https://socks.news】28","server":"95.217.72.126","port":3882,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"dEldTzkqVlhORUhbejg+MT5DPyhcVUowWl1aa0FsbVk="}
+  - {"name":"瑞士【付费推荐：https://socks.news】29","server":"195.15.254.25","port":54748,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"ghBuJ9pZOF9MohhGyPjo3rvilQhlw9NzBDlOVDonQN0="}
+  - {"name":"巴西【付费推荐：https://socks.news】30","server":"bz02.ssr.ee","port":443,"type":"trojan","password":"9d0a75d2-f747-4afa-b43f-d208af9e8f9a","sni":"bz02.ssr.ee"}
+  - {"name":"中国【付费推荐：https://socks.news】31","server":"ctmm.gscloud.bond","port":31620,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"f16d3752-7bae-474e-87dc-f892df2caeaf"}
+  - {"name":"英国【付费推荐：https://socks.news】32","server":"3.8.112.166","port":22222,"type":"trojan","password":"telegram-id-privatevpns","sni":"trojan.burgerip.co.uk"}
+  - {"name":"中国【付费推荐：https://socks.news】33","server":"45.192.110.82","port":443,"type":"trojan","password":"fdd37849-e66c-464d-8b1c-56a1a16e05bf","sni":"pshk.goudan.world"}
+  - {"name":"中国【付费推荐：https://socks.news】34","server":"cm1.awslcn.info","port":25230,"type":"vmess","uuid":"243eab52-9ac1-405c-887c-eb112c0985b8","alterId":0,"cipher":"auto","tls":false,"network":"ws","ws-opts":{"path":"/","headers":{"Host":"cm1.awslcn.info"}}}
+  - {"name":"未知【付费推荐：https://socks.news】35","server":"naiu-jp.05vr9nyqg5.download","port":13012,"type":"trojan","password":"e279c494-c426-443a-a034-a04516409242","sni":"cloudflare.node-ssl.cdn-alibaba.com"}
+  - {"name":"日本【付费推荐：https://socks.news】36","server":"sgp.fastsoonlink.com","port":40005,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"3FB23A19-9424-40C7-9139-3540228283FA"}
+  - {"name":"伊朗【付费推荐：https://socks.news】37","server":"83.147.216.173","port":9848,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"zUQvFioae7KzAZ2GCMgNum"}
+  - {"name":"德国【付费推荐：https://socks.news】38","server":"185.189.58.195","port":8080,"type":"vmess","uuid":"42e25353-b1ae-59f3-bd59-d86d2737b814","alterId":0,"cipher":"auto","tls":false}
+  - {"name":"美国【付费推荐：https://socks.news】39","server":"us01.trojanyyds.xyz","port":443,"type":"trojan","password":"243eab52-9ac1-405c-887c-eb112c0985b8","sni":"us01.trojanyyds.xyz"}
+  - {"name":"中国【付费推荐：https://socks.news】40","server":"45.250.184.183","port":6181,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"11a805f2-41a7-4cd8-8406-0470c3cde0d3"}
+  - {"name":"美国【付费推荐：https://socks.news】41","server":"in01.trojanyyds.xyz","port":443,"type":"trojan","password":"243eab52-9ac1-405c-887c-eb112c0985b8","sni":"in01.trojanyyds.xyz"}
+  - {"name":"美国【付费推荐：https://socks.news】42","server":"18.157.246.12","port":22222,"type":"trojan","password":"telegram-id-directvpn","sni":"trojan.burgerip.co.uk"}
+  - {"name":"未知【付费推荐：https://socks.news】43","server":"209.94.90.87","port":2087,"type":"trojan","password":"Aimer","sni":"ameqo.esslh.filegear-sg.me","network":"ws","ws-opts":{"path":"/","headers":{"Host":"ameqo.esslh.filegear-sg.me"}}}
+  - {"name":"南非【付费推荐：https://socks.news】44","server":"129.232.134.112","port":990,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"f8f7aCzcPKbsF8p3"}
+  - {"name":"美国【付费推荐：https://socks.news】45","server":"13.41.118.49","port":22222,"type":"trojan","password":"telegram-id-privatevpns","sni":"trojan.burgerip.co.uk"}
+  - {"name":"英国【付费推荐：https://socks.news】46","server":"series-a1.samanehha.co","port":443,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"W74XFALLLuw6m5IA"}
+  - {"name":"伊朗【付费推荐：https://socks.news】47","server":"217.144.106.226","port":11122,"type":"ss","cipher":"aes-256-gcm","password":"XpG6mphc"}
+  - {"name":"美国【付费推荐：https://socks.news】48","server":"206.238.236.134","port":443,"type":"trojan","password":"Aimer","sni":"ameqo.esslh.filegear-sg.me","network":"ws","ws-opts":{"path":"/","headers":{"Host":"ameqo.esslh.filegear-sg.me"}}}
