--- a/subs/yudou.yaml
+++ b/subs/yudou.yaml
@@ -1,47 +1,52 @@
 proxies:
   - {"name":"美国(yudou66.com 玉豆免费节点)","server":"s4.cn-db.top","port":2086,"type":"vmess","uuid":"4b36625c-b9d9-3ea6-aed5-86d62c70e16d","alterId":0,"cipher":"auto","tls":false,"skip-cert-verify":true,"network":"ws","udp":true,"ws-opts":{"path":"/dabai.in172.67.103.33","headers":{"Host":"100-59-133-139.s4.cn-db.top"}}}
-  - {"name":"法国(yudou66.com 玉豆免费节点)","server":"irvideo.cfd","port":443,"type":"vmess","uuid":"e537f2f5-2a0c-4f59-92c9-832ca6433bf3","alterId":0,"cipher":"auto","tls":true,"skip-cert-verify":true,"network":"ws","udp":true,"ws-opts":{"path":"/linkws","headers":{"Host":"irvideo.cfd"}},"servername":"irvideo.cfd"}
-  - {"name":"法国(yudou66.com 玉豆免费节点) 2","server":"163.5.159.231","port":443,"type":"vmess","uuid":"e537f2f5-2a0c-4f59-92c9-832ca6433bf3","alterId":0,"cipher":"auto","tls":true,"skip-cert-verify":true,"network":"ws","udp":true,"ws-opts":{"path":"/linkws","headers":{"Host":"irvideo.cfd"}},"servername":"irvideo.cfd"}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 2","server":"212.41.15.119","port":443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 3","server":"cm1.awslcn.info","port":25230,"type":"vmess","uuid":"243eab52-9ac1-405c-887c-eb112c0985b8","alterId":0,"cipher":"auto","tls":false,"skip-cert-verify":true,"network":"ws","udp":true,"ws-opts":{"path":"/","headers":{"Host":"cm1.awslcn.info"}}}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 4","server":"120.234.102.229","port":52908,"type":"vmess","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"cipher":"auto","tls":false,"skip-cert-verify":true,"udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 5","server":"92.242.220.22","port":37885,"type":"vmess","uuid":"8dee19ab-50ce-4d06-be42-5e53c8989ccc","alterId":0,"cipher":"auto","tls":false,"skip-cert-verify":true,"udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 6","server":"83.147.216.173","port":9848,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"zUQvFioae7KzAZ2GCMgNum","udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 2","server":"183.236.51.23","port":53002,"type":"vmess","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"cipher":"auto","tls":false,"skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 3","server":"yaml777.133010.xyz","port":80,"type":"vmess","uuid":"4a1cb611-381c-4fff-ca35-99be316eee17","alterId":0,"cipher":"auto","tls":false,"skip-cert-verify":true,"network":"ws","udp":true,"ws-opts":{"path":"/yaml777","headers":{"Host":"yaml777.133010.xyz"}}}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 4","server":"92.242.220.22","port":37885,"type":"vmess","uuid":"8dee19ab-50ce-4d06-be42-5e53c8989ccc","alterId":0,"cipher":"auto","tls":false,"skip-cert-verify":true,"udp":true}
+  - {"name":"德国(yudou66.com 玉豆免费节点)","server":"5.75.135.123","port":80,"type":"vmess","uuid":"6c2cfb86-be44-4f40-984b-d3331bc984a5","alterId":0,"cipher":"auto","tls":false,"skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 5","server":"cm1.awslcn.info","port":25230,"type":"vmess","uuid":"243eab52-9ac1-405c-887c-eb112c0985b8","alterId":0,"cipher":"auto","tls":false,"skip-cert-verify":true,"network":"ws","udp":true,"ws-opts":{"path":"/","headers":{"Host":"cm1.awslcn.info"}}}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 6","server":"92.242.220.22","port":37885,"type":"vmess","uuid":"8dee19ab-50ce-4d06-be42-5e53c8989ccc","alterId":0,"cipher":"auto","tls":false,"skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 7","server":"183.236.51.23","port":46602,"type":"vmess","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"cipher":"auto","tls":false,"skip-cert-verify":true,"udp":true}
   - {"name":"俄罗斯(yudou66.com 玉豆免费节点)","server":"cm1.awslcn.info","port":25230,"type":"vmess","uuid":"243eab52-9ac1-405c-887c-eb112c0985b8","alterId":0,"cipher":"auto","tls":false,"skip-cert-verify":true,"network":"ws","udp":true,"ws-opts":{"path":"/","headers":{"Host":"cm1.awslcn.info"}}}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 7","server":"183.236.51.23","port":53002,"type":"vmess","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"cipher":"auto","tls":false,"skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 8","server":"120.232.153.63","port":40972,"type":"vmess","uuid":"770ee730-2450-4e3c-a6c6-3932bd32afbd","alterId":64,"cipher":"auto","tls":false,"skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 9","server":"120.234.102.229","port":52908,"type":"vmess","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"cipher":"auto","tls":false,"skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 10","server":"183.236.48.158","port":50052,"type":"vmess","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"cipher":"auto","tls":false,"skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 11","server":"183.236.51.23","port":56601,"type":"vmess","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"cipher":"auto","tls":false,"skip-cert-verify":true,"udp":true}
   - {"name":"日本(yudou66.com 玉豆免费节点)","server":"arxfw2b78fi2q9hzylhn.freesocks.work","port":443,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"Nk9asglDzHzjktVzTkvhaA","udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 8","server":"13.250.38.94","port":443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
-  - {"name":"波兰(yudou66.com 玉豆免费节点)","server":"91.206.179.179","port":443,"type":"trojan","password":"3723507166611775488","skip-cert-verify":true,"udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 9","server":"181.119.30.20","port":990,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"f8f7aCzcPKbsF8p3","udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 10","server":"45.87.175.157","port":8080,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"QCXDxuDlTTMD7jtgHUjIoj","udp":true}
-  - {"name":"加拿大(yudou66.com 玉豆免费节点)","server":"23.154.136.247","port":2376,"type":"ss","cipher":"aes-256-gcm","password":"faBAoD54k87UJG7","udp":true}
-  - {"name":"香港(yudou66.com 玉豆免费节点)","server":"8.210.171.28","port":443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
-  - {"name":"法国(yudou66.com 玉豆免费节点) 3","server":"151.101.2.216","port":80,"type":"vmess","uuid":"c69f3029-ae1e-45ca-aa08-70970f14dfd2","alterId":0,"cipher":"auto","tls":false,"skip-cert-verify":true,"network":"ws","udp":true,"ws-opts":{"path":"/racevpn?telegram@ISVvpn-telegram@ISVvpn-telegram@ISVvpn","headers":{"Host":"telegram-ISVvpn.ir"}}}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 11","server":"88.218.78.95","port":8443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 12","server":"183.236.51.23","port":46602,"type":"vmess","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"cipher":"auto","tls":false,"skip-cert-verify":true,"udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 13","server":"151.101.2.216","port":80,"type":"vmess","uuid":"c69f3029-ae1e-45ca-aa08-70970f14dfd2","alterId":0,"cipher":"auto","tls":false,"skip-cert-verify":true,"network":"ws","udp":true,"ws-opts":{"path":"/racevpn?telegram@ISVvpn-telegram@ISVvpn-telegram@ISVvpn","headers":{"Host":"telegram-ISVvpn.ir"}}}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 14","server":"106.240.1.52","port":20443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 15","server":"92.242.220.22","port":37885,"type":"vmess","uuid":"8dee19ab-50ce-4d06-be42-5e53c8989ccc","alterId":0,"cipher":"auto","tls":false,"skip-cert-verify":true,"udp":true}
-  - {"name":"法国(yudou66.com 玉豆免费节点) 4","server":"irvideo.cfd","port":443,"type":"vmess","uuid":"e537f2f5-2a0c-4f59-92c9-832ca6433bf3","alterId":0,"cipher":"auto","tls":true,"skip-cert-verify":true,"network":"ws","udp":true,"ws-opts":{"path":"/linkws","headers":{"Host":"irvideo.cfd"}},"servername":"irvideo.cfd"}
-  - {"name":"法国(yudou66.com 玉豆免费节点) 5","server":"irvideo.cfd","port":443,"type":"vmess","uuid":"e537f2f5-2a0c-4f59-92c9-832ca6433bf3","alterId":0,"cipher":"auto","tls":true,"skip-cert-verify":true,"network":"ws","udp":true,"ws-opts":{"path":"/linkws","headers":{"Host":"irvideo.cfd"}},"servername":"irvideo.cfd"}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 16","server":"183.236.51.23","port":56601,"type":"vmess","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"cipher":"auto","tls":false,"skip-cert-verify":true,"udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 17","server":"18.182.63.216","port":443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 18","server":"8tv68qhq.slashdevslashnetslashtun.net","port":17001,"type":"ss","cipher":"aes-256-gcm","password":"QBNVUDH1J62ZEVWK","udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 19","server":"195.15.254.25","port":54748,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"ghBuJ9pZOF9MohhGyPjo3rvilQhlw9NzBDlOVDonQN0=","udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 20","server":"66.81.247.88","port":2083,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 21","server":"52.231.97.210","port":2053,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 22","server":"185.204.109.190","port":8443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 23","server":"120.232.153.63","port":40972,"type":"vmess","uuid":"770ee730-2450-4e3c-a6c6-3932bd32afbd","alterId":64,"cipher":"auto","tls":false,"skip-cert-verify":true,"udp":true}
-  - {"name":"香港(yudou66.com 玉豆免费节点) 2","server":"47.238.136.235","port":443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 24","server":"206.238.236.134","port":443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 25","server":"209.94.90.87","port":2087,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
-  - {"name":"俄罗斯(yudou66.com 玉豆免费节点) 2","server":"185.22.155.228","port":23456,"type":"ss","cipher":"aes-256-gcm","password":"dongtaiwang.com","udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 26","server":"92.242.220.22","port":37885,"type":"vmess","uuid":"8dee19ab-50ce-4d06-be42-5e53c8989ccc","alterId":0,"cipher":"auto","tls":false,"skip-cert-verify":true,"udp":true}
-  - {"name":"法国(yudou66.com 玉豆免费节点) 6","server":"163.5.159.231","port":443,"type":"vmess","uuid":"e537f2f5-2a0c-4f59-92c9-832ca6433bf3","alterId":0,"cipher":"auto","tls":true,"skip-cert-verify":true,"network":"ws","udp":true,"ws-opts":{"path":"/linkws","headers":{"Host":"irvideo.cfd"}},"servername":"irvideo.cfd"}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 27","server":"198.62.62.192","port":2083,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 28","server":"45.136.199.132","port":443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 29","server":"183.236.48.158","port":50052,"type":"vmess","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"cipher":"auto","tls":false,"skip-cert-verify":true,"udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 30","server":"27.50.49.207","port":443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 31","server":"206.238.236.90","port":2087,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
-  - {"name":"美国(yudou66.com 玉豆免费节点) 32","server":"188.164.159.91","port":2083,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 12","server":"83.147.216.173","port":9848,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"zUQvFioae7KzAZ2GCMgNum","udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 13","server":"8tv68qhq.slashdevslashnetslashtun.net","port":17001,"type":"ss","cipher":"aes-256-gcm","password":"QBNVUDH1J62ZEVWK","udp":true}
+  - {"name":"香港(yudou66.com 玉豆免费节点)","server":"cu1.guguyun.xyz","port":23733,"type":"ss","cipher":"aes-128-gcm","password":"e2c62a73-3132-48a6-a020-25c3ae0d8af2","udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 14","server":"qh62onjn.slashdevslashnetslashtun.net","port":16003,"type":"ss","cipher":"aes-256-gcm","password":"FAJT26PIM7CB71OZ","udp":true}
   - {"name":"日本(yudou66.com 玉豆免费节点) 2","server":"arxfw2b78fi2q9hzylhn.freesocks.work","port":443,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"Nk9asglDzHzjktVzTkvhaA","udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 15","server":"mmt-shyd.iwe.la","port":46461,"type":"ss","cipher":"aes-128-gcm","password":"e2c62a73-3132-48a6-a020-25c3ae0d8af2","udp":true}
+  - {"name":"韩国(yudou66.com 玉豆免费节点)","server":"3.35.20.163","port":80,"type":"ss","cipher":"aes-256-gcm","password":"amazonskr05","udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 16","server":"156.253.237.131","port":2222,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"bfWZbxtXnPX6sSF_n9byxw","udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 17","server":"ti3hyra4.slashdevslashnetslashtun.net","port":15010,"type":"ss","cipher":"aes-256-gcm","password":"YPNNBXGRNCAXB9N7","udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 18","server":"95.217.72.126","port":3882,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"dEldTzkqVlhORUhbejg+MT5DPyhcVUowWl1aa0FsbVk=","udp":true}
+  - {"name":"日本(yudou66.com 玉豆免费节点) 3","server":"18.183.233.62","port":80,"type":"ss","cipher":"aes-256-gcm","password":"amazonskr05","udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 19","server":"8tv68qhq.slashdevslashnetslashtun.net","port":18001,"type":"ss","cipher":"aes-256-gcm","password":"MMRTIYVECN33018T","udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 20","server":"195.15.254.25","port":54748,"type":"ss","cipher":"chacha20-ietf-poly1305","password":"ghBuJ9pZOF9MohhGyPjo3rvilQhlw9NzBDlOVDonQN0=","udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 21","server":"bj.xissyun.com","port":46595,"type":"ss","cipher":"aes-128-gcm","password":"e2c62a73-3132-48a6-a020-25c3ae0d8af2","udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 22","server":"w72tapyb.slashdevslashnetslashtun.net","port":16016,"type":"ss","cipher":"aes-256-gcm","password":"6KYL3YM7UAOAE94Q","udp":true}
+  - {"name":"韩国(yudou66.com 玉豆免费节点) 2","server":"96.8.121.166","port":443,"type":"trojan","password":"fdd37849-e66c-464d-8b1c-56a1a16e05bf","skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 23","server":"212.41.15.119","port":443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
+  - {"name":"香港(yudou66.com 玉豆免费节点) 2","server":"8.210.171.28","port":443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
+  - {"name":"香港(yudou66.com 玉豆免费节点) 3","server":"47.238.136.235","port":443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
+  - {"name":"韩国(yudou66.com 玉豆免费节点) 3","server":"119.8.115.238","port":443,"type":"trojan","password":"fdd37849-e66c-464d-8b1c-56a1a16e05bf","skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 24","server":"66.81.247.88","port":2083,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 25","server":"185.204.109.190","port":8443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
+  - {"name":"香港(yudou66.com 玉豆免费节点) 4","server":"52.231.97.210","port":2053,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 26","server":"104.19.57.183","port":2096,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 27","server":"209.94.90.87","port":2087,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 28","server":"206.238.236.134","port":443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 29","server":"206.238.236.90","port":2087,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 30","server":"45.136.199.132","port":443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 31","server":"188.164.159.91","port":2083,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
+  - {"name":"波兰(yudou66.com 玉豆免费节点)","server":"holy-seahorse.boa152.lol","port":443,"type":"trojan","password":"3723507166611775488","sni":"holy-seahorse.boa152.lol","skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 32","server":"172.67.172.63","port":2087,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
+  - {"name":"波兰(yudou66.com 玉豆免费节点) 2","server":"91.206.179.179","port":443,"type":"trojan","password":"3723507166611775488","skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 33","server":"27.50.49.207","port":443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 34","server":"13.250.38.94","port":443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 35","server":"5.182.84.229","port":2087,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
+  - {"name":"美国(yudou66.com 玉豆免费节点) 36","server":"106.240.1.52","port":20443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
+  - {"name":"法国(yudou66.com 玉豆免费节点)","server":"88.218.78.95","port":8443,"type":"trojan","password":"Aimer","skip-cert-verify":true,"udp":true}
